file I/O to input board configuration and solutions